# avinet

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
client/static/: index.html
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
